--- a/.github/workflows/update-firebase.yml
+++ b/.github/workflows/update-firebase.yml
@@ -1,36 +1,23 @@
-name: News Scrapper
+name: Upload News JSON  # Changed name to reflect its purpose
 
 on:
   push:
     branches:
-      - main
-  schedule:
-    - cron: '*/10 * * * *'  # Every 10 minutes
-  workflow_dispatch:
+      - main  # Runs when changes are pushed to the main branch
+  workflow_dispatch:  # Allows manual triggering
 
 permissions:
   contents: write  # Allow pushing changes
 
 jobs:
-  track:
+  upload-json:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}  # Explicitly use the token
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      - name: Run News Scraper
-        run: python NewsExtract.py
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Firebase CLI
         run: npm install -g firebase-tools
@@ -44,4 +31,4 @@ jobs:
 
       - name: Upload JSON to Firebase
         run: |
-          firebase database:set /news ./latest_news.json --project ai-news-d465d
+          firebase database:set /news ./latest_news.json --project ai-news-d465d --confirm
