--- a/.github/workflows/update-firebase.yml
+++ b/.github/workflows/update-firebase.yml
@@ -1,4 +1,4 @@
-name: Upload latest_news.json to Firebase Storage
+name: Update Firebase Storage
 
 on:
   push:
@@ -9,29 +9,28 @@ jobs:
   upload-to-firebase:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Install Firebase CLI
-      run: npm install -g firebase-tools
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
 
-    - name: Get Firebase Private Key
-      id: firebase-private-key
-      run: echo "::set-output name=privateKey::${{ secrets.FIREBASE_PRIVATE_KEY }}"
+      - name: Get Firebase Private Key
+        id: firebase-private-key
+        run: echo "::set-output name=privateKey::${{ secrets.FIREBASE_PRIVATE_KEY }}"
 
-    - name: Get Firebase Credentials
-      id: firebase-credentials
-      run: echo "::set-output name=credentials::${{ secrets.FIREBASE_CREDENTIALS }}"
+      - name: Get Firebase Credentials
+        id: firebase-credentials
+        run: echo "${{ secrets.FIREBASE_CREDENTIALS }}" > firebase_creds.json
 
-    - name: Authenticate Firebase
-      run: |
-        combinedCredentials=$(echo "${{ steps.firebase-credentials.outputs.credentials }}" | jq -r '. + {privateKey: "'${{ steps.firebase-private-key.outputs.privateKey }}'" }')
-        echo "$combinedCredentials" > firebase_creds.json
-        firebase use --add
-        firebase login:ci --no-localhost "$combinedCredentials"
+      - name: Extract Firebase Project ID
+        id: project-id
+        run: echo "PROJECT_ID=$(jq -r '.project_id' firebase_creds.json)" >> $GITHUB_ENV
 
+      - name: Authenticate Firebase
+        run: |
+          firebase use --add --token "$(cat firebase_creds.json)"
+          firebase login:ci --no-localhost "$(cat firebase_creds.json)"
 
-    - name: Upload latest_news.json
-      run: |
-        firebase deploy --only storage --token "$(firebase login:ci --no-localhost "$combinedCredentials")" --project ${{ secrets.FIREBASE_CREDENTIALS | jq -r '.project_id' }}
-
+      - name: Upload latest_news.json
+        run: firebase deploy --only storage --token "$(cat firebase_creds.json)" --project $PROJECT_ID
