--- a/.github/workflows/update-firebase.yml
+++ b/.github/workflows/update-firebase.yml
@@ -1,4 +1,4 @@
-name: News Scraper
+name: News Sender
 
 on:
   schedule:
@@ -34,6 +34,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+          git pull --rebase origin main  # ✅ Pull latest changes before push
           git add .
-          git commit -m "Update data" || echo "No changes to commit"
+          git commit -m "Update news data" || echo "No changes to commit"
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
