--- a/.github/workflows/update-firebase.yml
+++ b/.github/workflows/update-firebase.yml
@@ -2,7 +2,7 @@ name: News Sender
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Runs every 5 minutes
+    - cron: '0 * * * *'
   workflow_dispatch:
 
 permissions:
