--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -10,7 +10,7 @@ on:
     branches: ["main"]
     
   schedule:
-    - cron: '*/10 * * * *'  # Runs every 10 minutes
+    - cron: '0 * * * *'  # Runs every 60 minutes
 
 
   # Allows you to run this workflow manually from the Actions tab
